--- a/neangjang/ios/Podfile
+++ b/neangjang/ios/Podfile
@@ -19,6 +19,8 @@ target 'neangjang' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'neangjangTests' do
     inherit! :complete
     # Pods for testing
