--- a/neangjang/package.json
+++ b/neangjang/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-calendars": "^1.1284.0",
     "react-native-gesture-handler": "^2.4.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
