--- a/neangjang/package.json
+++ b/neangjang/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.1284.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
