--- a/neangjang/package.json
+++ b/neangjang/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.4.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -18,6 +19,8 @@
     "react-native": "0.68.1",
     "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.1284.0",
+    "react-native-dropdown-picker": "^5.4.2",
+    "react-native-image-picker": "^4.8.4",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0"
