--- a/neangjang/package.json
+++ b/neangjang/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.68.1",
     "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.1284.0",
+    "react-native-camera-kit": "^13.0.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-image-picker": "^4.8.4",
     "react-native-safe-area-context": "^4.2.5",
