--- a/neangjang/package.json
+++ b/neangjang/package.json
@@ -22,6 +22,7 @@
     "react-native-camera-kit": "^13.0.0",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-image-picker": "^4.8.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0"
