--- a/neangjang/package.json
+++ b/neangjang/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@notifee/react-native": "^7.1.0",
     "@react-native-picker/picker": "^2.4.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
